# CLI_argparse-_ETL

./: README.md  ornek_girdi.csv  pyproject.toml
etltool/: __init__.py  __main__.py  main.py  transforms.py
tests/: test_cli.py  test_transforms.py
