[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "etltool"
version = "0.1.0"
description = "Komut satırından dosya girişi alan küçük ETL aracı"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
etltool = "etltool.main:main"

[tool.setuptools.packages.find]
where = ["."]
